[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Enemies/AngryMole2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/IdleMole.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Dirt.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/AngryMole3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/AngryMole.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/AngryMole5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/AngryMole4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Other/DirtParticle.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Mole.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "Angry",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.4607
height = 3.37679

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.20603
height = 3.49172

[node name="Mole" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource( 9 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.0338659 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Idle"
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1.5 )
shape = SubResource( 3 )

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 0.5, 0.5 )
amount = 18
lifetime = 0.6
speed_scale = 0.8
lifetime_randomness = 0.58
texture = ExtResource( 8 )
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2( 0, -1 )
spread = 58.16
gravity = Vector2( 0, 50 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 0.41

[node name="LeftWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 4

[node name="RightWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 4

[node name="RightFloor" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="LeftFloor" type="RayCast2D" parent="."]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="DetectorLeft" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( -80, 0 )
collision_mask = 2

[node name="DetectorRight" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.05
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
